# Parse_RIAC_Tg_Bot

./: .gitignore  README.md  pyproject.toml  reqs.txt
parse_riac_tg_bot/: Database.py  News.py  actions.py  config.py  database.py  main.py
parse_riac_tg_bot/parsing/: News.py  parser_1.py
parse_riac_tg_bot/processing/: negative.json  positive.json  proccessing.py
parse_riac_tg_bot/spark/: searchSynonyms.py
parse_riac_tg_bot/tg_bot/: bot.py
parse_riac_tg_bot/tomita/: config.proto  rawConfig.proto  tomita.py
parse_riac_tg_bot/tomita/dependencies/: facttypes.proto  input.txt  mydic.gzt  people.cxx
parse_riac_tg_bot/tomita/output/: PrettyOutput.html
