[tool.poetry]
name = "parse-riac-tg-bot"
version = "0.1.0"
description = "Парсер-бот сайта РИАЦ"
authors = ["b_es <ivan2003064@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
aiohttp-retry = "^2.8.3"
bs4 = "^0.0.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
