[tool.poetry]
name = "parse-riac-tg-bot"
version = "0.1.0"
description = "Парсер-бот сайта РИАЦ"
authors = ["b_es <ivan2003064@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
aiohttp-retry = "^2.8.3"
bs4 = "^0.0.1"
pytelegrambotapi = "^4.14.1"
termcolor = "^2.4.0"
gigachat = "^0.1.13"
nltk = "^3.8.1"
findspark = "^2.0.1"
pyspark = "^3.5.0"
numpy = "^1.26.3"
scipy = "^1.11.4"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
